# pytorch-step-by-step-learning

./: .gitignore  README.md  modal_jupyter_server.py  pyproject.toml
chapters/: fix_path.py
chapters/chapter_0/: chapter_0.ipynb
chapters/chapter_1/: chapter_1.ipynb  chapter_1_cuda.ipynb
chapters/chapter_2/: chapter-2-1.ipynb
chapters/chapter_3/: chapter_3.ipynb
chapters/chapter_4/: chapter_4.ipynb
data_generation/: simple_linear_regression.py
data_preparation/: v0.py  v1.py  v2.py
general_knowledge/: data_analysis_basics.ipynb  decision_trees_from_scratch.ipynb  encoding.ipynb  gradient_descent_from_scratch.ipynb  re_basics.ipynb  test.ipynb  understanding_correlation.ipynb  understanding_dependency_injection.ipynb  understanding_groupby.ipynb  understanding_meshgrid.ipynb  understanding_quantiles.ipynb
general_knowledge/datasets/: dt.csv
model_configuration/: v0.py  v1.py  v2.py  v3.py
model_training/: v0.py  v1.py  v2.py  v3.py  v4.py  v5.py
stepbystep/: v0.py
