[project]
name = "pytorchbook"
version = "0.1.0"
description = "Daniel Voigt Godoy - Deep Learning with PyTorch _ Step-by-Step A Beginner's Guide (2024) (2024, Independently published) - libgen.li"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "numpy>2.0", # required for torch compatibility
    "pandas>=2.2.3",
    "transformers>=4.0.0", # fixed missing constraint warning
    "opencv-python",
    "dotenv>=0.9.9",
    "scikit-learn",
    "ipykernel",
    "tensorboard>=2.19.0",
    "graphviz>=0.21",
    "torchviz>=0.0.3",
    "matplotlib>=3.10.3",
    "modal>=1.1.0",
    "injector>=0.22.0",
    "seaborn>=0.13.2",
]
